<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:padding="@dimen/size_20dp"
    android:scaleType="centerCrop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/size_10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/id_Lpln"
                    android:layout_width="@dimen/size_40dp"
                    android:layout_height="@dimen/size_40dp"
                    android:background="@drawable/pln" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PLN"
                    android:textColor="@color/colorWhiteCombination"
                    android:textSize="@dimen/size_30dp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/size_5dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:text="@string/app_name"
                        android:textColor="@color/colorWhiteCombination"
                        android:textSize="@dimen/size_15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:text="Mobile Apps"
                        android:textColor="@color/colorWhiteCombination"
                        android:textSize="@dimen/size_10dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:text="@string/app_ems_txt"
                    android:textColor="@color/colorWhiteCombination"
                    android:textSize="@dimen/size_10dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:orientation="vertical"
        android:padding="@dimen/size_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size_15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_choose"
                android:drawableLeft="@drawable/ic_verified_user"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="@dimen/size_5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_choose"
                android:drawableLeft="@drawable/ic_vpn_key"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/size_5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_20dp"
            android:background="@drawable/bottom"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_15dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/chk_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Remember Me"
            android:textColor="@color/colorWhite"
            android:theme="@style/CheckBoxTheme" />

        <LinearLayout
            android:id="@+id/go_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bottom_red"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Lupa Password"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_15dp" />
        </LinearLayout>

    </LinearLayout>


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="right"-->
    <!--android:orientation="horizontal"-->
    <!--android:padding="@dimen/size_10dp">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/lupa_password"-->
    <!--android:textColor="@color/colorWhite" />-->

    <!--<TextView-->
    <!--android:id="@+id/go_repassword"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/click_me"-->
    <!--android:textColor="@color/colorWhite"-->
    <!--android:textStyle="italic" />-->

    <!--</LinearLayout>-->


</LinearLayout>