<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSnow"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginTop="-65dp"
        android:background="@drawable/service_desk"
        app:border_color="@color/colorWhiteCombination"
        app:border_width="3dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_profil_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Selamat Datang di Kartini 99 v.2 Mobile" />

        <TextView
            android:id="@+id/txt_profil_dept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="PT. PLN (Persero) Pembangkitan Tanjung Jati B" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size_10dp"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="Nama:" />

            <TextView
                android:id="@+id/id_name_user"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:hint="@string/nama_user"
                android:textStyle="bold" />
        </TableRow>


        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="Bidang " />

            <TextView
                android:id="@+id/id_bidang"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:hint="@string/id_bidang" />

        </TableRow>


        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="Sub Bidang " />

            <TextView
                android:id="@+id/id_subid"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:hint="@string/id_subid" />

        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="Jabatan " />

            <TextView
                android:id="@+id/id_jabatan"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:hint="Jabatan" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Tujuan Jabatan"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:background="@drawable/line_kotak"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_5dp"
                android:text="Melaksanakan pemeliharaan pembangkit" />

        </LinearLayout>

    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:text="Dekomposisi Proses"-->
    <!--android:textColor="@color/colorPrimary"-->
    <!--android:textSize="@dimen/size_15dp"-->
    <!--android:textStyle="bold" />-->

    <!--<ExpandableListView-->
    <!--android:id="@+id/id_expt_userguide"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:divider="@android:color/darker_gray"-->
    <!--android:dividerHeight="0.5dp"-->
    <!--android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />-->

    <!--</LinearLayout>-->

</LinearLayout>